update chatbot